--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+
+# Folder named "data" is ignored
+data/
+
+# All files ending in ".db", ".sql", ".sqlite" or ".sqlite3" are ignored
+*.db
+*.sql
+*.sqlite
+*.sqlite3
+
+# All files ending in ".rst" are ignored
+*.rst
