--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,7 +3,8 @@ name: Upload Python Package
 on:
   release:
     types: [published]
-
+  workflow_dispatch:  # Add manual trigger
+  
 permissions:
   contents: read
 
