--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install package and dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest
+        python -m pip install .[test]
     - name: Run all tests in the tests folder with pytest
       run: |
         python -m pytest tests
